# scorep

./: .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  COPYING  ChangeLog  INSTALL  Makefile-rpaths.inc.am  Makefile.am  Makefile.inc.am  OPEN_ISSUES  README  README.md  Readme_Task  bootstrap  configure.ac  generate-library-dependencies-la-object.hpp  library_data.hpp
.github/workflows/: mirror.yml
.gitlab/merge_request_templates/: default.md
build-backend/: Makefile.am  Makefile.libbfd.in  Makefile.libgotcha.in  Makefile.libunwind.in  configure.ac
build-config/: VERSION  downloads  packages.sh
build-config/common/: Makefile-rpaths.inc.am  common.am  platforms.am
build-config/m4/: scorep_computenode_compilers.m4  scorep_cube4.m4  scorep_cuda.m4  scorep_dlfcn.m4  scorep_fortran.m4  scorep_fortran_charlen_type.m4  scorep_gcc_plugin.m4  scorep_gotcha.m4  scorep_instrumentation_flags.m4  scorep_io_recording.m4  scorep_libbfd.m4  scorep_library_wrapping.m4  scorep_llvm_plugin.m4  scorep_lustre_api.m4  scorep_memory.m4  scorep_mpi.m4  scorep_mpi_c_compliance.m4  scorep_mpi_c_decls.m4  scorep_mpi_f08.m4  scorep_mpi_f08_symbols.m4  scorep_omp_ancestry.m4  scorep_ompt.m4  scorep_online_access.m4  scorep_opencl.m4  scorep_pami.m4  scorep_pthread.m4  scorep_sampling.m4  scorep_shmem.m4  scorep_sys_detection_names.m4  scorep_timer.m4  scorep_vendor_externals.m4
build-config/patches/: GOTCHA-1.0.8.patch
build-frontend/: Makefile.am  configure.ac
build-gcc-plugin/: configure.ac
build-includes/: backend-only.am  common.am  compute-node.m4  front-and-backend.am  mpi-backend-only.am  shmem-backend-only.am
build-instrumentation-plugin/: .gitignore  Makefile.am  configure.ac  configure~
build-libwrap/: configure.ac
build-llvm-plugin/: configure.ac
build-mpi/: Makefile.am  configure.ac
build-score/: Makefile.am  configure.ac
build-shmem/: .gitignore  Makefile.am  configure.ac
common/beautifier/: beautify  beautify-common  beautify.cfg  beautify_f.cfg  pre-commit
doc/: license.tex
doc/doxygen-user/: 01_introduction.dox  02_quickstart.dox  03_instrumentation.dox  04_measurement.dox  05_measurement.dox  05_score.dox  06_score.dox  A0_readme.dox  A1_installation.dox  A2_mpigroups.dox  doxygen-user.cfg.in  scorep_config_usage.dox.in  scorep_usage.dox.in
doc/images/: score-p-overview.pptx
doc/profile/: scorep_metrics.html
include/scorep/: Makefile.inc.am  SCOREP_Libwrap.h  SCOREP_Libwrap_Macros.h  SCOREP_Libwrap_Plugins.h  SCOREP_PublicTypes.h  SCOREP_SubstratePlugins.h  SCOREP_Tau.h
m4/: afs_external_lib.m4  afs_lt_rpaths.m4
share/: .gitignore  scorep.spec.in
src/: .gitignore  Makefile.inc.am  config-custom.h  config-instrumentation-plugin.h.in  config-instrumentation-plugin.h.in~  config.h
src/measurement/: .#svn:externals  Makefile.cube_writer.inc.am  Makefile.inc.am  Makefile.mpi.inc.am  Makefile.shmem.inc.am  SCOREP_Config.c  SCOREP_Definitions.c  SCOREP_Events.c  SCOREP_Libwrap.c  SCOREP_RuntimeManagement.c  scorep_definition_cube4.c  scorep_location.c  (+13 more)
test/: Makefile.inc.am  Makefile.mpi.inc.am  scorep_monolithic_subsystems.c
(+838 files in other folders)
